gcc/testsuite/gdc.test/fail_compilation/imports/a18243.d
module a18243;

import std.math : isNaN;

public bool isNaN() { return false; }
